@@ -103,9 +103,19 @@ typedef struct linger		LINGER;
 typedef struct linger		*PLINGER;
 typedef struct linger		*LPLINGER;
 
+#ifdef __LP64__
+struct __ms_timeval {
+	__LONG32 tv_sec;
+	__LONG32 tv_usec;
+};
+typedef struct __ms_timeval	TIMEVAL;
+typedef struct __ms_timeval	*PTIMEVAL;
+typedef struct __ms_timeval	*LPTIMEVAL;
+#else
 typedef struct timeval		TIMEVAL;
 typedef struct timeval		*PTIMEVAL;
 typedef struct timeval		*LPTIMEVAL;
+#endif
 
 #ifdef __LP64__
 #pragma pop_macro("u_long")
